# mastermind-openenv

./: .gitignore  Dockerfile  RATIONALE.md  README.md  client.py  evaluate.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rubrics.py
.github/workflows/: ci.yml
server/: app.py  scenarios.py  triage_environment.py
tests/: test_environment.py
